manifests/test-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
spec:
  selector:
    app: foo
  ports:
    - port: 5678
