manifests/test-deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: test.k8s.av0.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foo-svc
                port:
                  number: 5678
